# python-plyfile

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  README.md  ply.py  ply_format.py  plyfile.py  pyproject.toml  setup.py  test-all.sh  tox.ini
.github/workflows/: pull-request-doc-preview.yml  python-package.yml
doc/: api.md  api.rst  conf.py  developing.md  faq.md  index.md  index.rst  install.md  maintaining.md  philosophy.md  rtd-bootstrap.sh  run.sh  usage.md
examples/: plot.py  tet.ply
test/: .gitignore  test.py  test_plyfile.py  tet.ply
